syntax = "proto3";

option go_package = "proto/PostRet";

package go.micro.srv.PostRet;

service PostRet {
    rpc PostRet(Request) returns (Response) {}
    rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
    rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
    string say = 1;
}

message Request {

    // 手机号
    string Mobile = 1;
    //密码
    string Password = 2;
    //短信验证码
    string SmsCode = 3;

}

message Response {
    string Errno = 1;
    string Errmsg = 2;
    // 将sessionid返回
    string SessionId = 3;
}

message StreamingRequest {
    int64 count = 1;
}

message StreamingResponse {
    int64 count = 1;
}

message Ping {
    int64 stroke = 1;
}

message Pong {
    int64 stroke = 1;
}
